# create3-miner

./: .gitignore  README.md  bun.lockb  package.json  print.ts
rs/: Cargo.toml  build.rs
rs/src/: constants.rs  create3.rs  gpu.rs  lib.rs  main.rs  test_shader.rs
rs/src/gpu_search/: cuda.rs  metal_search.rs  mod.rs
rs/src/shader/: CREATE2.cu  CREATE2.metal  CREATE3.metal  Keccak256.cu  Keccak256.metal
src/: constants.ts  deploy.ts  idk.ts  index.ts  types.ts  utils.ts  worker.ts
src/abis/: SafeProxyFactory.ts
src/create3/: constants.ts  index.ts  test.ts  utils.ts  worker.ts
