patch = { crates-io = { metal = { path = "/Users/tate/.rhack/metal-0.27.0" } } }
[package]
name = "create3"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.6.0"
alloy-sol-types = "0.6.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
num_cpus = "1.0"
futures = "0.3"
metal = "0.27.0"
objc = "0.2.7"
block = "0.1.6"
