[package]
name = "create3"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.6.0"
alloy-sol-types = "0.6.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
num_cpus = "1.0"
futures = "0.3"

# GPU dependencies
metal = { version = "0.27.0", optional = true }
objc = { version = "0.2.7", optional = true }
block = { version = "0.1.6", optional = true }
cuda-runtime-sys = "0.3.0-alpha.1"
cuda-driver-sys = "0.3.0-alpha.1"
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"

[features]
default = ["cuda"]
cuda = []
metal = ["dep:metal", "dep:objc", "dep:block"]
