[package]
name = "create3"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.6.0"
alloy-sol-types = "0.6.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
num_cpus = "1.0"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }

# GPU dependencies
metal = { version = "0.27.0", optional = true }
objc = { version = "0.2.7", optional = true }
block = { version = "0.1.6", optional = true }
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
cuda-driver-sys = { version = "0.3.0-alpha.1", optional = true }
rustacuda = { version = "0.1.3", optional = true }
rustacuda_core = { version = "0.1.2", optional = true }
rustacuda_derive = { version = "0.1.2", optional = true }

[features]
default = ["metal"]
cuda = [
  "dep:cuda-runtime-sys",
  "dep:cuda-driver-sys",
  "dep:rustacuda",
  "dep:rustacuda_core",
  "dep:rustacuda_derive",
]
metal = ["dep:metal", "dep:objc", "dep:block"]
